  this verification.

- Fixed IceGrid bug where the server deactivation timeout would be
  ignored if the server was not deactivated using the IceGrid
  administrative facility.

- Fixed IceSSL bug in all language mappings that could cause a server
  to crash if a failure occurred during connection establishment and
  network tracing was enabled.


C++ Changes
===========

- Fixed a bug that could cause an assertion failure when flushing
  batch requests.

- Added support for clang compiler on Mac OS X.

- Fixed issue where a connection to a remote address would always fail
  with an assertion on Windows 8.

- Declaring ice_print for local exceptions is now optional. This
  method is not declared by default, but you can use the metadata tag
  "cpp:ice_print" to enable the method declaration. 


Visual Studio Add-in Changes
============================

- Fixed a bug with C++ projects that build static libraries.

- Fixed a bug that could cause Visual Studio to hang while opening or
  building solutions containing a large number of projects.

- Fixed a bug during project cleaning in which an exception was thrown
  when trying to remove generated files and the user is not authorized
  to remove the files.  

- Fixed a bug with solutions that contain unloaded projects. 


C# Changes
==========

- Fixed a bug in Ice.Application for Mono that could cause the VM to
  crash when a signal occurred.

- Minor marshalling/un-marshalling performance improvement (removed
  virtual specifier from streaming class).

- Added missing throwLocalException method to Ice.AsyncResult
  interface.

- Struct types that contains default values are mapped to a class.


Java Changes
============

- Fixed a bug in the generated code for a Slice exception with no
  data members: constructors are now generated correctly.

- Fixed an IceSSL bug in which the IceSSL.Alias property was not
  working correctly.

- The mapping for Slice classes and structures now defines a