@@ -8,7 +8,7 @@
 // **********************************************************************
 
 //
-// Generated by makeprops.py from file ../config/PropertyNames.xml, Tue Jul 12 07:22:34 2011
+// Generated by makeprops.py from file ../config/PropertyNames.xml, Tue Feb 14 13:07:25 2012
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -469,6 +469,7 @@ const IceInternal::Property IceSSLPropsData[] =
     IceInternal::Property("IceSSL.EntropyDaemon", false, 0),
     IceInternal::Property("IceSSL.FindCert.*", false, 0),
     IceInternal::Property("IceSSL.ImportCert.*", false, 0),
+    IceInternal::Property("IceSSL.InitOpenSSL", false, 0),
     IceInternal::Property("IceSSL.KeyFile", false, 0),
     IceInternal::Property("IceSSL.Keystore", false, 0),
     IceInternal::Property("IceSSL.KeystorePassword", false, 0),
