@@ -8,7 +8,7 @@
 // **********************************************************************
 
 //
-// Generated by makeprops.py from file ../config/PropertyNames.xml, Tue Jul 12 07:22:34 2011
+// Generated by makeprops.py from file ../config/PropertyNames.xml, Tue Feb 14 13:07:25 2012
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
