@@ -8,7 +8,7 @@
 // **********************************************************************
 
 //
-// Generated by makeprops.py from file ../config/PropertyNames.xml, Tue Jul 12 07:22:34 2011
+// Generated by makeprops.py from file ../config/PropertyNames.xml, Tue Feb 14 13:07:25 2012
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -450,6 +450,7 @@ public final class PropertyNames
         new Property("IceSSL\\.EntropyDaemon", false, null),
         new Property("IceSSL\\.FindCert\\.[^\\s]+", false, null),
         new Property("IceSSL\\.ImportCert\\.[^\\s]+", false, null),
+        new Property("IceSSL\\.InitOpenSSL", false, null),
         new Property("IceSSL\\.KeyFile", false, null),
         new Property("IceSSL\\.Keystore", false, null),
         new Property("IceSSL\\.KeystorePassword", false, null),
